[package]
name = "labtool"
version = "0.1.0"
edition = "2021"
authors = ["Pawel Rozniecki <pawelrozniecki1997@gmail.com"]

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
error-chain = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.20", features = ["derive"] }
lazy_static = "1.5.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
chrono = "0.4.38"
prettytable = "0.10.0"
comfy-table = "7.1.1"
colored = "2.1.0"